--- a/puppet/config/puppet.conf
+++ b/puppet/config/puppet.conf
@@ -5,6 +5,7 @@ vardir=/var/lib/puppet
 ssldir=$vardir/ssl
 rundir=/var/run/puppet
 factpath=$vardir/facts
+# Pour synchroniser les plugins/libs sur vos clients Puppet
 pluginsync = true
 
 # Les environnements
@@ -22,18 +23,31 @@ modulepath = $confdir/environments/$environment/modules:$confdir/modules
 manifest = $confdir/manifests/unknown_environment.pp
 
 # Configuration du Puppet Master
-certname=PUPPET MASTER FQDN # Ici c'est le fqdn de votre Puppet Master. /!\ Si vous utilisez un load balancer, ici il faudra mettre le fqdn de votre VIP !
-facts_terminus = inventory_active_record
-reports = log, store # ,http # Ajouter http et decommentez la ligne reporturl pour utiliser le dashboard Puppet
+# Ici c'est le fqdn de votre Puppet Master.
+# /!\ Si vous utilisez un load balancer, ici il faudra mettre le fqdn de votre VIP !
+certname=PUPPET MASTER FQDN
+
+# Pour stocker les facts en base
+#facts_terminus = inventory_active_record
+
+# Les rapports Puppet
+# Ajouter http et decommentez la ligne reporturl pour utiliser le dashboard Puppet
+reports = log, store
 #reporturl = http://DASHBOARD URL/reports
-#node_terminus = exec # Decommentez ces deux lignes pour utiliser un ENC : voir http://wp.me/p1OEGw-gX
+
+# L'ENC : voir http://wp.me/p1OEGw-gX
+#node_terminus = exec # Decommentez ces deux lignes pour utiliser un ENC
 #external_nodes = ENC PROG
-storeconfigs = true # pour utiliser les ressources exportees & co
-dbadapter = mysql   # on utiliser un serveur MySQL
-dbname = dbname     # C'est votre database, son user/pass et votre serveur MySQL
-dbuser = dbuser
-dbpassword = dbpass
-dbserver = PUPPET DB SERVER
+
+#storeconfigs = true # pour utiliser les ressources exportees & co
+
+# Le serveur SQL
+# Serveur SQL de type MySQL avec ses parametres de connexion
+#dbadapter = mysql
+#dbname = dbname
+#dbuser = dbuser
+#dbpassword = dbpass
+#dbserver = PUPPET DB SERVER
 
 # C'est la partie agent : votre Puppet Master peut etre aussi un client... de lui meme !
 [agent]
