Puppet : conf client + module

--- a/puppet/config/puppet.conf
+++ b/puppet/config/puppet.conf
@@ -8,19 +8,8 @@ factpath=$vardir/facts
 # Pour synchroniser les plugins/libs sur vos clients Puppet
 pluginsync = true
 
-# Les environnements
-[prod]
-manifest = $confdir/environments/prod/manifests/site.pp
-
-[dev]
-manifest = $confdir/environments/dev/manifests/site.pp
-
-[test]
-manifest = $confdir/environments/test/manifests/site.pp
-
 [master]
-modulepath = $confdir/environments/$environment/modules:$confdir/modules
-manifest = $confdir/manifests/unknown_environment.pp
+modulepath = $confdir/modules:/usr/share/puppet/module
 
 # Configuration du Puppet Master
 # Ici c'est le fqdn de votre Puppet Master.
